src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>AccountName__c</fullName>
        <description>SFDC1-45- to get the Account Name</description>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountRequested__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-2101 This tells users whether or not an account has been requested for the lead. This is a read-only field and should only be updated by automated process.</description>
        <label>Account Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1 -105, Look up field for a related Account</description>
        <inlineHelpText>This is the account record associated to the Company Name. If a new Account is requested from the lead, this field will be populated once the case to request the new account is marked as closed complete.</inlineHelpText>
        <label>Requested Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Account must be active to be associated to lead.</errorMessage>
            <filterItems>
                <field>Account.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <infoMessage>Account must be active to be associated to lead.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Authority__c</fullName>
        <description>SFDc1- 105; Picklist field for Authority</description>
        <inlineHelpText>Contact&apos;s Autority Level in buying process.</inlineHelpText>
        <label>Authority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>I am responsible</fullName>
                </value>
                <value>
                    <fullName>I can suggest but will require approval</fullName>
                </value>
                <value>
                    <fullName>I am not involved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BudgetRange__c</fullName>
        <description>SFDC1-551; This field represent budget for a Lead which on conversion populate same field on opportunity</description>
        <inlineHelpText>Amount that has been set aside for purchase.</inlineHelpText>
        <label>Budget Range</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&lt; 25,000</fullName>
                </value>
                <value>
                    <fullName>25,000-50,000</fullName>
                </value>
                <value>
                    <fullName>50,000-100,000</fullName>
                </value>
                <value>
                    <fullName>&gt; 100,000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <description>SFDC1 -105 ; Picklist value for Budget of a lead/contact</description>
        <inlineHelpText>Budget availability.</inlineHelpText>
        <label>Budget</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Funding has been secured</fullName>
                </value>
                <value>
                    <fullName>Funding will require approval</fullName>
                </value>
                <value>
                    <fullName>No Budget</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BusinessLineInterest__c</fullName>
        <description>SFDC1-1033</description>
        <inlineHelpText>Sales/Marketing BL that product of interest falls under.</inlineHelpText>
        <label>Business Line Interest</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CalculatedRegion__c</fullName>
        <description>SFDC1-1760 : This Calculated Region field is populated based on the value of the Region picklist in Country custom object</description>
        <formula>TEXT(Country__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Region in which contact is located</inlineHelpText>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallDispositionedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-1760 - To track the user who called for Disposition</description>
        <inlineHelpText>Colleague who completed qualification process.</inlineHelpText>
        <label>Call Dispositioned By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CallDispositionedBy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CallProspectProfiler__c</fullName>
        <description>SFDC1- 105: URL for prospect profiler ; SFDC1-4975: Call Prospect Profiler field will build a URL which will provide access to the Prospect profiler information in Eloqua.</description>
        <formula>HYPERLINK(&quot;https://login.eloqua.com/cvp?LoginPrefix=IHSE&amp;Username=Profiler.User&amp;Password=999645ce-a4ad-472d-9255-59602b503e98,DE1FF21F17416652504F15E859ACB2CA69D4BB52BCC14C633D97A0645D1BC7D6C99CD3AC92492336029C210AF9252AED67F6C18E3FF99DE34E67D53D9A9BA5BB36469BCB3C338CD697FFAB0194E17E25&amp;Url=apps/profiler/index.aspx?emailAddress=&quot;&amp; Email,&quot;Click here for Prospect Profiler Info&quot;)</formula>
        <inlineHelpText>Provides insight to Contacts interactions with IHSM</inlineHelpText>
        <label>Prospect Profiler</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallToActionType__c</fullName>
        <description>SFDC1- 105; A text field describes about action of a lead</description>
        <inlineHelpText>Indicates the type of form the Contact filled out.</inlineHelpText>
        <label>Call-To-Action Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contact Analyst/Expert</fullName>
                </value>
                <value>
                    <fullName>Contact Sales or Request Quote/Exploratory Meeting</fullName>
                </value>
                <value>
                    <fullName>Contact Us Request</fullName>
                </value>
                <value>
                    <fullName>Internal Form Submission - Hot</fullName>
                </value>
                <value>
                    <fullName>Request Free Trial or Demo</fullName>
                </value>
                <value>
                    <fullName>Analyst/Research Submissions</fullName>
                </value>
                <value>
                    <fullName>Internal Form Submission</fullName>
                </value>
                <value>
                    <fullName>Request for Information</fullName>
                </value>
                <value>
                    <fullName>Download Sample Report/Data/Map</fullName>
                </value>
                <value>
                    <fullName>Download Whitepaper/Case Study</fullName>
                </value>
                <value>
                    <fullName>Internal Form Submission - Cool</fullName>
                </value>
                <value>
                    <fullName>Watch Recorded Webcast</fullName>
                </value>
                <value>
                    <fullName>Event Registration</fullName>
                </value>
                <value>
                    <fullName>Newsletter Subscribe</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CallbackDate__c</fullName>
        <description>SFDC1- 105; Call back date for client</description>
        <inlineHelpText>Date of next scheduled call.</inlineHelpText>
        <label>Callback Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CallingCountryCode__c</fullName>
        <description>SFDC1- 105 ; Country code of contact , Ex - +44 (UK)</description>
        <inlineHelpText>Calling Country code for the Contact.</inlineHelpText>
        <label>Calling Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CampaignType__c</fullName>
        <description>SFDC1-9504 Auto-populated via Eloqua during lead insertion based on Campaign the lead is associated it.</description>
        <inlineHelpText>Auto-populated via Eloqua during lead insertion based on Campaign the lead is associated it.</inlineHelpText>
        <label>Campaign Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1- 105; Lookup field for associated contact</description>
        <inlineHelpText>Please populate from associated Contact</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ConversionDate__c</fullName>
        <description>SFDC1- 105; Date field for Conversion of a lead</description>
        <inlineHelpText>Reflects the date the Lead was converted.</inlineHelpText>
        <label>Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ConvertedFromCustom__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-2377 - to Check the lead is converted from Custom Solution</description>
        <label>Converted From Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>SFDC1-1081 Country lookup field to enforce prohibited country validations.
SFDC1-7580 - Country isn&apos;t Required for Lead Creation.</description>
        <inlineHelpText>Country of Contact.</inlineHelpText>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreatedBy__c</fullName>
        <description>SFDC1-2305; Hidden field needed for Lead source update</description>
        <formula>CreatedBy.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Person who created the Lead.</inlineHelpText>
        <label>Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateDispositioned__c</fullName>
        <description>SFDC1-105; Date field for dis positioned</description>
        <inlineHelpText>Date qualification was completed.</inlineHelpText>
        <label>Date Dispositioned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DialResult__c</fullName>
        <description>SFDC1-1033</description>
        <label>Dial Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DisqualifedReason__c</fullName>
        <description>SFDC1-105; Picklist value available for lead disqualification</description>
        <inlineHelpText>Reason Lead is not valid.</inlineHelpText>
        <label>Disqualifed Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Already Purchased</fullName>
                </value>
                <value>
                    <fullName>Company Too Small</fullName>
                </value>
                <value>
                    <fullName>Contact Non Responsive/Wrong Contact</fullName>
                </value>
                <value>
                    <fullName>Duplicate/Existing Lead</fullName>
                </value>
                <value>
                    <fullName>IHSM Decision to Pass/No Bid</fullName>
                </value>
                <value>
                    <fullName>Invalid/Test Data</fullName>
                </value>
                <value>
                    <fullName>No Budget at this time</fullName>
                </value>
                <value>
                    <fullName>No further interest, has all information needed</fullName>
                </value>
                <value>
                    <fullName>Not the Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Product/Solution does not match need</fullName>
                </value>
                <value>
                    <fullName>Time frame too far out</fullName>
                </value>
                <value>
                    <fullName>Expired Lead (Not for Manual Selection)</fullName>
                </value>
                <value>
                    <fullName>Recycle: Blocked by Gatekeeper</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Recycle: No Action Taken by Sales</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Recycle: No Need at this time</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Recycle: Timeframe too far out</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Recycle: Unable to Contact</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Recycle:  Already Purchased</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Recycle:  Final Attempt - Unable to Contact</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Recycle:  No Action Taken by Sales</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Recycle:  No Budget at this time</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Recycle:  No Need at this time</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Recycle:  Not the Decision Maker</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Recycle:  Timeframe too far out</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Recycle: Already Purchased</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Recycle: No Budget at this time</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Recycle: Not the Decision Maker</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Rejection: Already Working With Sales Rep</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Rejection: Current  Customer</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Rejection: Do Not Call Request</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ElqProspectID__c</fullName>
        <description>SFDC1- 105; Text field for  EloqProspect ID</description>
        <inlineHelpText>Eloqua ID Unique to Contact</inlineHelpText>
        <label>ElqProspectID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailUnknown__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-2398; A checkbox field for lead</description>
        <label>Email Unknown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmployeeBand__c</fullName>
        <description>SFHD1- 105; The field suggests different Market value/band for a lead/contact</description>
        <inlineHelpText>Size of company based on # of employees.</inlineHelpText>
        <label>Employee Band</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Mid-Market</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Enterprise(Office: 1000+)</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Mid-Market(DepartmentStore:100-999)</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Small(School: 1-99)</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Unknown(House)</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExistingOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFCD1- 105 ; Lookup field for associated existing opportunity</description>
        <inlineHelpText>Select if you would like to associate this lead to an existing opportunity.</inlineHelpText>
        <label>Existing Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Leads (Existing Opportunity)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FirstTouchPreSales__c</fullName>
        <description>SFDC1-1759  &apos;First Touch - Pre-Sales&apos; - Read-only, for reporting purposes only</description>
        <inlineHelpText>Date Sales began working the lead.</inlineHelpText>
        <label>First Touch - Pre-Sales</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FirstTouchSales__c</fullName>
        <description>SFDC1-1759 &apos;First Touch - Sales&apos; - read-only, for reporting purposes only</description>
        <inlineHelpText>Date Pre Sales began working the lead.</inlineHelpText>
        <label>First Touch - Sales</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <description>SFHD1- 105; Functional area of a lead/contact</description>
        <inlineHelpText>Please select a value</inlineHelpText>
        <label>Function</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Academic/Education</fullName>
                </value>
                <value>
                    <fullName>Analyst</fullName>
                </value>
                <value>
                    <fullName>Business Development/Sales</fullName>
                </value>
                <value>
                    <fullName>C-Suite Executives</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Corporate Services</fullName>
                </value>
                <value>
                    <fullName>Economist</fullName>
                </value>
                <value>
                    <fullName>Environmental Health Safety Sustainability</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Exploration &amp; Production</fullName>
                </value>
                <value>
                    <fullName>Financial/Investment</fullName>
                </value>
                <value>
                    <fullName>Geology</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Information Technology</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Librarian</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>Product/Project Management</fullName>
                </value>
                <value>
                    <fullName>Risk Management</fullName>
                </value>
                <value>
                    <fullName>Strategic Planning</fullName>
                </value>
                <value>
                    <fullName>Supply Chain</fullName>
                </value>
                <value>
                    <fullName>Option Value</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InternalLDNotes__c</fullName>
        <description>SFDC1- 105; Long Text field for notes</description>
        <inlineHelpText>Internal Notes field for Pre Sales.</inlineHelpText>
        <label>Internal LD Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LDCompletionStatus__c</fullName>
        <description>SFDC1-1033</description>
        <inlineHelpText>Result of Pre Sales follow up.</inlineHelpText>
        <label>LD Completion Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDNotes__c</fullName>
        <description>SFDC1 - 105; Notes for progress of a lead</description>
        <inlineHelpText>Notes gathered during Pre-Sales call.</inlineHelpText>
        <label>LD Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LDScriptID__c</fullName>
        <description>SFDC1- 105; text field</description>
        <inlineHelpText>Script Associated to the Product indicated.</inlineHelpText>
        <label>LD Script ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDScriptScore__c</fullName>
        <description>SFDC1- 105; Text field for Script score</description>
        <inlineHelpText>Lead Score based on Pre Sales Activity.</inlineHelpText>
        <label>LD Script Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastHour__c</fullName>
        <description>SFDC1-217 -- to Identify the past hour records for SLA</description>
        <formula>IF(
AND(
    CreatedDate &gt;= NOW(), 
    CreatedDate &lt;= NOW() -1/24 ),
TRUE,
FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Hour</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeadAge2__c</fullName>
        <description>SFDC1-4760;Today&apos;s date minus the created on date(Hidden field which support Lead Age)</description>
        <formula>NOW() - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Age2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeadAge__c</fullName>
        <description>SFDC1-4760;Today&apos;s date minus the created on date</description>
        <formula>IF (LeadAge2__c&gt; 0, 
TEXT(FLOOR(LeadAge2__c)) &amp; &quot; Days &quot; &amp; 
TEXT( FLOOR( 24 * (LeadAge2__c - FLOOR(LeadAge2__c) ))) &amp; &quot; Hours&quot; , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days since creation of lead</inlineHelpText>
        <label>Lead Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadDistributionNotes__c</fullName>
        <description>SFDC1 -105; Long Notes for a Lead</description>
        <inlineHelpText>Internal notes field for manual processing of lead.</inlineHelpText>
        <label>Lead Distribution Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <description>SFDC1 -105; Different stages for a lead life-cycle; Picklist value are different  for A/B leads &amp; C leads</description>
        <inlineHelpText>Please select a value</inlineHelpText>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PendingMKTGQualification</fullName>
                </value>
                <value>
                    <fullName>Convert</fullName>
                </value>
                <value>
                    <fullName>Doesnotmeetrequirements/NeedmoreInformation</fullName>
                </value>
                <value>
                    <fullName>PendingSalesQualification</fullName>
                </value>
                <value>
                    <fullName>Nurtureopportunity</fullName>
                </value>
                <value>
                    <fullName>Noadditionalopportunity</fullName>
                </value>
                <value>
                    <fullName>Leadexposedtosales</fullName>
                </value>
                <value>
                    <fullName>SenttoSales</fullName>
                </value>
                <value>
                    <fullName>SenttoCustomerCare</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LegacyIDUnique__c</fullName>
        <description>SFDC1-7046: Legacy ID Unique field is a concatenation of the source system name and a source system record id to ensure record is uniquely identified.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field store the concatenation of the source system name and a source system record id to ensure the record is uniquely identified.</inlineHelpText>
        <label>LegacyIDUnique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>SFDC1-6330 : Legacy Lead identifier for migrated cases. First 3 letters identifies the source system</description>
        <externalId>true</externalId>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyReference__c</fullName>
        <description>SFDC1-7046: Legacy Reference field is a friendly system reference to the source record.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is a friendly system reference to the source record.</inlineHelpText>
        <label>LegacyReference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacySystem__c</fullName>
        <description>SFDC1-7046: Legacy System field is a picklist that represents the original system the record came from.</description>
        <inlineHelpText>Name of the CRM system the source record came from</inlineHelpText>
        <label>LegacySystem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LegacySystem</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <defaultValue>&apos;Are you sure you want to convert this case to a lead?&apos;</defaultValue>
        <description>SFDC1-5410 Field to display message on &apos;Convert to Lead&apos; case quick action</description>
        <inlineHelpText>Message</inlineHelpText>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Need__c</fullName>
        <description>SFDC1- 105; Picklist value for Need</description>
        <inlineHelpText>Please select a value</inlineHelpText>
        <label>Need</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes – Email Me</fullName>
                </value>
                <value>
                    <fullName>Yes – Call Me</fullName>
                </value>
                <value>
                    <fullName>Not interested in follow-up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>SFHD1- 105; To track any valuable information about lead</description>
        <label>Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NumberofDials__c</fullName>
        <description>SFDC1- 105; Text field for Dial increments</description>
        <inlineHelpText>Number of attempts to contact by Pre Sales</inlineHelpText>
        <label>Number of Dials</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1- 105; Lookup field for associated opportunity</description>
        <inlineHelpText>Please populate from associated  opportunity</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrgLevel__c</fullName>
        <description>SFHD1- 105; Organisational level/Position of a contact/lead</description>
        <inlineHelpText>Contact&apos;s placement in the company</inlineHelpText>
        <label>Org Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advisory</fullName>
                </value>
                <value>
                    <fullName>Board Member</fullName>
                </value>
                <value>
                    <fullName>CEO or President</fullName>
                </value>
                <value>
                    <fullName>CXO</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Non Management</fullName>
                </value>
                <value>
                    <fullName>Vice President</fullName>
                </value>
                <value>
                    <fullName>Option Value</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OriginatingNotes__c</fullName>
        <description>SFHD1- 105; To track any valuable information about lead</description>
        <inlineHelpText>Details regarding source of Marketing Lead and comments provided by Contact and/or Marketing</inlineHelpText>
        <label>Originating Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OriginatingSourceURL__c</fullName>
        <description>SFHD1- 105; Source URL for lead/contact</description>
        <inlineHelpText>URL where Form was submitted from</inlineHelpText>
        <label>Originating Source URL</label>
        <type>Url</type>
    </fields>
</CustomObject>